Refactoring: revise methods of InputUtils